# freesound-client

./: .env  .gitignore  404.html  LICENSE  README.md  index.html  lib.py  main.py  objects.inv  pyproject.toml  sitemap.xml  test.py
api/api-client/: index.html
api/api-fs-api/: index.html
api/api-reference/: index.html
api/api-utilities/: index.html
appendix/descriptors-list/: index.html
appendix/fields-list/: index.html
appendix/filters-list/: index.html
appendix/missing-features/: index.html
appendix/query-examples/: index.html
freesound/: __init__.py  filter_types.py  formatting.py  freesound_api.py  freesound_client.py  freesound_descriptors.py  freesound_downloader.py  freesound_errors.py  freesound_fields.py  freesound_filters.py  freesound_list_maker.py  freesound_requests.py  freesound_sound.py  freesound_track.py  track.py  utilities.py
how-to-guide/: index.html
motivation/: index.html
search/: search_index.json
stylesheets/: extra.css
tutorials/: access_search_results.py  download_many_files.py  download_one_file.py  filter_range_conditions.py  get_sound_info.py  handle_pagination.py  load_analysis_data.py  tutorial_basics.py  tutorial_freesound.py
tutorials/records/: 240301T2042_results_list.json
tutorials/tutorial-basics/: index.html
tutorials/tutorial-freesound/: index.html
